@@ -98,7 +98,7 @@ public class SnapshotLifecycleStats implements Writeable, ToXContentObject {
     }
 
     public SnapshotLifecycleStats(StreamInput in) throws IOException {
-        this.policyStats = new ConcurrentHashMap<>(in.readMap(StreamInput::readString, SnapshotPolicyStats::new));
+        this.policyStats = new ConcurrentHashMap<>(in.readMap(SnapshotPolicyStats::new));
         this.retentionRunCount.inc(in.readVLong());
         this.retentionFailedCount.inc(in.readVLong());
         this.retentionTimedOut.inc(in.readVLong());
@@ -230,7 +230,7 @@ public class SnapshotLifecycleStats implements Writeable, ToXContentObject {
         List<SnapshotPolicyStats> metrics = getMetrics().values()
             .stream()
             .sorted(Comparator.comparing(SnapshotPolicyStats::getPolicyId)) // maintain a consistent order when serializing
-            .collect(Collectors.toList());
+            .toList();
         long totalTaken = metrics.stream().mapToLong(s -> s.snapshotsTaken.count()).sum();
         long totalFailed = metrics.stream().mapToLong(s -> s.snapshotsFailed.count()).sum();
         long totalDeleted = metrics.stream().mapToLong(s -> s.snapshotsDeleted.count()).sum();
