@@ -13,7 +13,7 @@ import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.metadata.Metadata;
-import org.elasticsearch.cluster.node.DiscoveryNode;
+import org.elasticsearch.cluster.node.DiscoveryNodeUtils;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
 import org.elasticsearch.cluster.routing.OperationRouting;
 import org.elasticsearch.cluster.service.ClusterApplierService;
@@ -42,6 +42,8 @@ import org.elasticsearch.xpack.core.ml.inference.trainedmodel.QuestionAnsweringC
 import org.elasticsearch.xpack.core.ml.inference.trainedmodel.RegressionConfig;
 import org.elasticsearch.xpack.core.ml.inference.trainedmodel.TextClassificationConfig;
 import org.elasticsearch.xpack.core.ml.inference.trainedmodel.TextEmbeddingConfig;
+import org.elasticsearch.xpack.core.ml.inference.trainedmodel.TextExpansionConfigUpdate;
+import org.elasticsearch.xpack.core.ml.inference.trainedmodel.TextSimilarityConfig;
 import org.elasticsearch.xpack.core.ml.inference.trainedmodel.ZeroShotClassificationConfig;
 import org.junit.Before;
 
@@ -53,6 +55,7 @@ import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
 import static org.hamcrest.Matchers.equalTo;
 import static org.mockito.Mockito.mock;
@@ -85,260 +88,358 @@ public class InferenceProcessorFactoryTests extends ESTestCase {
     }
 
     public void testCreateProcessorWithTooManyExisting() throws Exception {
-        InferenceProcessor.Factory processorFactory = new InferenceProcessor.Factory(
-            client,
-            clusterService,
-            Settings.builder().put(InferenceProcessor.MAX_INFERENCE_PROCESSORS.getKey(), 1).build()
-        );
+        Set<Boolean> includeNodeInfoValues = new HashSet<>(Arrays.asList(true, false));
 
-        processorFactory.accept(buildClusterStateWithModelReferences("model1"));
+        includeNodeInfoValues.forEach(includeNodeInfo -> {
+            InferenceProcessor.Factory processorFactory = new InferenceProcessor.Factory(
+                client,
+                clusterService,
+                Settings.builder().put(InferenceProcessor.MAX_INFERENCE_PROCESSORS.getKey(), 1).build(),
+                includeNodeInfo
+            );
 
-        ElasticsearchStatusException ex = expectThrows(
-            ElasticsearchStatusException.class,
-            () -> processorFactory.create(Collections.emptyMap(), "my_inference_processor", null, Collections.emptyMap())
-        );
+            try {
+                processorFactory.accept(buildClusterStateWithModelReferences("model1"));
+            } catch (IOException ioe) {
+                throw new AssertionError(ioe.getMessage());
+            }
 
-        assertThat(
-            ex.getMessage(),
-            equalTo(
-                "Max number of inference processors reached, total inference processors [1]. "
-                    + "Adjust the setting [xpack.ml.max_inference_processors]: [1] if a greater number is desired."
-            )
-        );
+            ElasticsearchStatusException ex = expectThrows(
+                ElasticsearchStatusException.class,
+                () -> processorFactory.create(Collections.emptyMap(), "my_inference_processor", null, Collections.emptyMap())
+            );
+
+            assertThat(
+                ex.getMessage(),
+                equalTo(
+                    "Max number of inference processors reached, total inference processors [1]. "
+                        + "Adjust the setting [xpack.ml.max_inference_processors]: [1] if a greater number is desired."
+                )
+            );
+        });
     }
 
     public void testCreateProcessorWithInvalidInferenceConfig() {
-        InferenceProcessor.Factory processorFactory = new InferenceProcessor.Factory(client, clusterService, Settings.EMPTY);
+        Set<Boolean> includeNodeInfoValues = new HashSet<>(Arrays.asList(true, false));
 
-        Map<String, Object> config = new HashMap<>() {
-            {
-                put(InferenceProcessor.FIELD_MAP, Collections.emptyMap());
-                put(InferenceResults.MODEL_ID_RESULTS_FIELD, "my_model");
-                put(InferenceProcessor.TARGET_FIELD, "result");
-                put(InferenceProcessor.INFERENCE_CONFIG, Collections.singletonMap("unknown_type", Collections.emptyMap()));
-            }
-        };
+        includeNodeInfoValues.forEach(includeNodeInfo -> {
+            InferenceProcessor.Factory processorFactory = new InferenceProcessor.Factory(
+                client,
+                clusterService,
+                Settings.EMPTY,
+                includeNodeInfo
+            );
 
-        ElasticsearchStatusException ex = expectThrows(
-            ElasticsearchStatusException.class,
-            () -> processorFactory.create(Collections.emptyMap(), "my_inference_processor", null, config)
-        );
-        assertThat(
-            ex.getMessage(),
-            equalTo(
-                "unrecognized inference configuration type [unknown_type]."
-                    + " Supported types [classification, regression, fill_mask, ner, pass_through, "
-                    + "text_classification, text_embedding, zero_shot_classification]"
-            )
-        );
+            Map<String, Object> config = new HashMap<>() {
+                {
+                    put(InferenceProcessor.FIELD_MAP, Collections.emptyMap());
+                    put(InferenceResults.MODEL_ID_RESULTS_FIELD, "my_model");
+                    put(InferenceProcessor.TARGET_FIELD, "result");
+                    put(InferenceProcessor.INFERENCE_CONFIG, Collections.singletonMap("unknown_type", Collections.emptyMap()));
+                }
+            };
 
-        Map<String, Object> config2 = new HashMap<>() {
-            {
-                put(InferenceProcessor.FIELD_MAP, Collections.emptyMap());
-                put(InferenceResults.MODEL_ID_RESULTS_FIELD, "my_model");
-                put(InferenceProcessor.TARGET_FIELD, "result");
-                put(InferenceProcessor.INFERENCE_CONFIG, Collections.singletonMap("regression", "boom"));
-            }
-        };
-        ex = expectThrows(
-            ElasticsearchStatusException.class,
-            () -> processorFactory.create(Collections.emptyMap(), "my_inference_processor", null, config2)
-        );
-        assertThat(ex.getMessage(), equalTo("inference_config must be an object with one inference type mapped to an object."));
-
-        Map<String, Object> config3 = new HashMap<>() {
-            {
-                put(InferenceProcessor.FIELD_MAP, Collections.emptyMap());
-                put(InferenceResults.MODEL_ID_RESULTS_FIELD, "my_model");
-                put(InferenceProcessor.TARGET_FIELD, "result");
-                put(InferenceProcessor.INFERENCE_CONFIG, Collections.emptyMap());
-            }
-        };
-        ex = expectThrows(
-            ElasticsearchStatusException.class,
-            () -> processorFactory.create(Collections.emptyMap(), "my_inference_processor", null, config3)
-        );
-        assertThat(ex.getMessage(), equalTo("inference_config must be an object with one inference type mapped to an object."));
-    }
-
-    public void testCreateProcessorWithTooOldMinNodeVersion() throws IOException {
-        InferenceProcessor.Factory processorFactory = new InferenceProcessor.Factory(client, clusterService, Settings.EMPTY);
-        processorFactory.accept(builderClusterStateWithModelReferences(Version.V_7_5_0, "model1"));
-
-        Map<String, Object> regression = new HashMap<>() {
-            {
-                put(InferenceProcessor.FIELD_MAP, Collections.emptyMap());
-                put(InferenceResults.MODEL_ID_RESULTS_FIELD, "my_model");
-                put(InferenceProcessor.TARGET_FIELD, "result");
-                put(
-                    InferenceProcessor.INFERENCE_CONFIG,
-                    Collections.singletonMap(RegressionConfig.NAME.getPreferredName(), Collections.emptyMap())
-                );
-            }
-        };
-
-        ElasticsearchException ex = expectThrows(
-            ElasticsearchException.class,
-            () -> processorFactory.create(Collections.emptyMap(), "my_inference_processor", null, regression)
-        );
-        assertThat(
-            ex.getMessage(),
-            equalTo("Configuration [regression] requires minimum node version [7.6.0] (current minimum node version [7.5.0]")
-        );
-
-        Map<String, Object> classification = new HashMap<>() {
-            {
-                put(InferenceProcessor.FIELD_MAP, Collections.emptyMap());
-                put(InferenceResults.MODEL_ID_RESULTS_FIELD, "my_model");
-                put(InferenceProcessor.TARGET_FIELD, "result");
-                put(
-                    InferenceProcessor.INFERENCE_CONFIG,
-                    Collections.singletonMap(
-                        ClassificationConfig.NAME.getPreferredName(),
-                        Collections.singletonMap(ClassificationConfig.NUM_TOP_CLASSES.getPreferredName(), 1)
-                    )
-                );
-            }
-        };
-
-        ex = expectThrows(
-            ElasticsearchException.class,
-            () -> processorFactory.create(Collections.emptyMap(), "my_inference_processor", null, classification)
-        );
-        assertThat(
-            ex.getMessage(),
-            equalTo("Configuration [classification] requires minimum node version [7.6.0] (current minimum node version [7.5.0]")
-        );
-    }
-
-    public void testCreateProcessorWithTooOldMinNodeVersionNlp() throws IOException {
-        InferenceProcessor.Factory processorFactory = new InferenceProcessor.Factory(client, clusterService, Settings.EMPTY);
-        processorFactory.accept(builderClusterStateWithModelReferences(Version.V_7_5_0, "model1"));
-
-        for (String name : List.of(
-            FillMaskConfig.NAME,
-            NerConfig.NAME,
-            PassThroughConfig.NAME,
-            TextClassificationConfig.NAME,
-            TextEmbeddingConfig.NAME,
-            ZeroShotClassificationConfig.NAME
-        )) {
-            ElasticsearchException ex = expectThrows(
-                ElasticsearchException.class,
-                () -> processorFactory.inferenceConfigUpdateFromMap(Map.of(name, Map.of()))
+            ElasticsearchStatusException ex = expectThrows(
+                ElasticsearchStatusException.class,
+                () -> processorFactory.create(Collections.emptyMap(), "my_inference_processor", null, config)
             );
             assertThat(
                 ex.getMessage(),
-                equalTo("Configuration [" + name + "] requires minimum node version [8.0.0] (current minimum node version [7.5.0]")
+                equalTo(
+                    "unrecognized inference configuration type [unknown_type]."
+                        + " Supported types [classification, regression, fill_mask, ner, pass_through, "
+                        + "question_answering, text_classification, text_embedding, text_expansion, "
+                        + "text_similarity, zero_shot_classification]"
+                )
             );
-        }
+
+            Map<String, Object> config2 = new HashMap<>() {
+                {
+                    put(InferenceProcessor.FIELD_MAP, Collections.emptyMap());
+                    put(InferenceResults.MODEL_ID_RESULTS_FIELD, "my_model");
+                    put(InferenceProcessor.TARGET_FIELD, "result");
+                    put(InferenceProcessor.INFERENCE_CONFIG, Collections.singletonMap("regression", "boom"));
+                }
+            };
+            ex = expectThrows(
+                ElasticsearchStatusException.class,
+                () -> processorFactory.create(Collections.emptyMap(), "my_inference_processor", null, config2)
+            );
+            assertThat(ex.getMessage(), equalTo("inference_config must be an object with one inference type mapped to an object."));
+
+            Map<String, Object> config3 = new HashMap<>() {
+                {
+                    put(InferenceProcessor.FIELD_MAP, Collections.emptyMap());
+                    put(InferenceResults.MODEL_ID_RESULTS_FIELD, "my_model");
+                    put(InferenceProcessor.TARGET_FIELD, "result");
+                    put(InferenceProcessor.INFERENCE_CONFIG, Collections.emptyMap());
+                }
+            };
+            ex = expectThrows(
+                ElasticsearchStatusException.class,
+                () -> processorFactory.create(Collections.emptyMap(), "my_inference_processor", null, config3)
+            );
+            assertThat(ex.getMessage(), equalTo("inference_config must be an object with one inference type mapped to an object."));
+        });
+    }
+
+    public void testCreateProcessorWithTooOldMinNodeVersion() throws IOException {
+        Set<Boolean> includeNodeInfoValues = new HashSet<>(Arrays.asList(true, false));
+
+        includeNodeInfoValues.forEach(includeNodeInfo -> {
+            InferenceProcessor.Factory processorFactory = new InferenceProcessor.Factory(
+                client,
+                clusterService,
+                Settings.EMPTY,
+                includeNodeInfo
+            );
+            try {
+                processorFactory.accept(builderClusterStateWithModelReferences(Version.V_7_5_0, "model1"));
+            } catch (IOException ioe) {
+                throw new AssertionError(ioe.getMessage());
+            }
+            Map<String, Object> regression = new HashMap<>() {
+                {
+                    put(InferenceProcessor.FIELD_MAP, Collections.emptyMap());
+                    put(InferenceResults.MODEL_ID_RESULTS_FIELD, "my_model");
+                    put(InferenceProcessor.TARGET_FIELD, "result");
+                    put(
+                        InferenceProcessor.INFERENCE_CONFIG,
+                        Collections.singletonMap(RegressionConfig.NAME.getPreferredName(), Collections.emptyMap())
+                    );
+                }
+            };
+
+            ElasticsearchException ex = expectThrows(
+                ElasticsearchException.class,
+                () -> processorFactory.create(Collections.emptyMap(), "my_inference_processor", null, regression)
+            );
+            assertThat(
+                ex.getMessage(),
+                equalTo("Configuration [regression] requires minimum node version [7.6.0] (current minimum node version [7.5.0]")
+            );
+
+            Map<String, Object> classification = new HashMap<>() {
+                {
+                    put(InferenceProcessor.FIELD_MAP, Collections.emptyMap());
+                    put(InferenceResults.MODEL_ID_RESULTS_FIELD, "my_model");
+                    put(InferenceProcessor.TARGET_FIELD, "result");
+                    put(
+                        InferenceProcessor.INFERENCE_CONFIG,
+                        Collections.singletonMap(
+                            ClassificationConfig.NAME.getPreferredName(),
+                            Collections.singletonMap(ClassificationConfig.NUM_TOP_CLASSES.getPreferredName(), 1)
+                        )
+                    );
+                }
+            };
+
+            ex = expectThrows(
+                ElasticsearchException.class,
+                () -> processorFactory.create(Collections.emptyMap(), "my_inference_processor", null, classification)
+            );
+            assertThat(
+                ex.getMessage(),
+                equalTo("Configuration [classification] requires minimum node version [7.6.0] (current minimum node version [7.5.0]")
+            );
+        });
+    }
+
+    public void testCreateProcessorWithTooOldMinNodeVersionNlp() throws IOException {
+        Set<Boolean> includeNodeInfoValues = new HashSet<>(Arrays.asList(true, false));
+
+        includeNodeInfoValues.forEach(includeNodeInfo -> {
+            InferenceProcessor.Factory processorFactory = new InferenceProcessor.Factory(
+                client,
+                clusterService,
+                Settings.EMPTY,
+                includeNodeInfo
+            );
+            try {
+                processorFactory.accept(builderClusterStateWithModelReferences(Version.V_7_5_0, "model1"));
+            } catch (IOException ioe) {
+                throw new AssertionError(ioe.getMessage());
+            }
+
+            for (String name : List.of(
+                FillMaskConfig.NAME,
+                NerConfig.NAME,
+                PassThroughConfig.NAME,
+                QuestionAnsweringConfig.NAME,
+                TextClassificationConfig.NAME,
+                TextEmbeddingConfig.NAME,
+                TextExpansionConfigUpdate.NAME,
+                TextSimilarityConfig.NAME,
+                ZeroShotClassificationConfig.NAME
+            )) {
+                ElasticsearchException ex = expectThrows(
+                    ElasticsearchException.class,
+                    () -> processorFactory.inferenceConfigUpdateFromMap(Map.of(name, Map.of()))
+                );
+                assertThat(
+                    ex.getMessage(),
+                    equalTo("Configuration [" + name + "] requires minimum node version [8.0.0] (current minimum node version [7.5.0]")
+                );
+            }
+
+            for (String name : List.of(ClassificationConfig.NAME.getPreferredName(), RegressionConfig.NAME.getPreferredName())) {
+                ElasticsearchException ex = expectThrows(
+                    ElasticsearchException.class,
+                    () -> processorFactory.inferenceConfigUpdateFromMap(Map.of(name, Map.of()))
+                );
+                assertThat(
+                    ex.getMessage(),
+                    equalTo("Configuration [" + name + "] requires minimum node version [7.6.0] (current minimum node version [7.5.0]")
+                );
+            }
+        });
     }
 
     public void testCreateProcessorWithEmptyConfigNotSupportedOnOldNode() throws IOException {
-        InferenceProcessor.Factory processorFactory = new InferenceProcessor.Factory(client, clusterService, Settings.EMPTY);
-        processorFactory.accept(builderClusterStateWithModelReferences(Version.V_7_5_0, "model1"));
+        Set<Boolean> includeNodeInfoValues = new HashSet<>(Arrays.asList(true, false));
 
-        Map<String, Object> minimalConfig = new HashMap<>() {
-            {
-                put(InferenceResults.MODEL_ID_RESULTS_FIELD, "my_model");
-                put(InferenceProcessor.TARGET_FIELD, "result");
+        includeNodeInfoValues.forEach(includeNodeInfo -> {
+            InferenceProcessor.Factory processorFactory = new InferenceProcessor.Factory(
+                client,
+                clusterService,
+                Settings.EMPTY,
+                includeNodeInfo
+            );
+            try {
+                processorFactory.accept(builderClusterStateWithModelReferences(Version.V_7_5_0, "model1"));
+            } catch (IOException ioe) {
+                throw new AssertionError(ioe.getMessage());
             }
-        };
 
-        ElasticsearchException ex = expectThrows(
-            ElasticsearchException.class,
-            () -> processorFactory.create(Collections.emptyMap(), "my_inference_processor", null, minimalConfig)
-        );
-        assertThat(ex.getMessage(), equalTo("[inference_config] required property is missing"));
+            Map<String, Object> minimalConfig = new HashMap<>() {
+                {
+                    put(InferenceResults.MODEL_ID_RESULTS_FIELD, "my_model");
+                    put(InferenceProcessor.TARGET_FIELD, "result");
+                }
+            };
+
+            ElasticsearchException ex = expectThrows(
+                ElasticsearchException.class,
+                () -> processorFactory.create(Collections.emptyMap(), "my_inference_processor", null, minimalConfig)
+            );
+            assertThat(ex.getMessage(), equalTo("[inference_config] required property is missing"));
+        });
     }
 
     public void testCreateProcessor() {
-        InferenceProcessor.Factory processorFactory = new InferenceProcessor.Factory(client, clusterService, Settings.EMPTY);
+        Set<Boolean> includeNodeInfoValues = new HashSet<>(Arrays.asList(true, false));
 
-        Map<String, Object> regression = new HashMap<>() {
-            {
-                put(InferenceProcessor.FIELD_MAP, Collections.emptyMap());
-                put(InferenceResults.MODEL_ID_RESULTS_FIELD, "my_model");
-                put(InferenceProcessor.TARGET_FIELD, "result");
-                put(
-                    InferenceProcessor.INFERENCE_CONFIG,
-                    Collections.singletonMap(RegressionConfig.NAME.getPreferredName(), Collections.emptyMap())
-                );
-            }
-        };
+        includeNodeInfoValues.forEach(includeNodeInfo -> {
+            InferenceProcessor.Factory processorFactory = new InferenceProcessor.Factory(
+                client,
+                clusterService,
+                Settings.EMPTY,
+                includeNodeInfo
+            );
 
-        processorFactory.create(Collections.emptyMap(), "my_inference_processor", null, regression);
+            Map<String, Object> regression = new HashMap<>() {
+                {
+                    put(InferenceProcessor.FIELD_MAP, Collections.emptyMap());
+                    put(InferenceResults.MODEL_ID_RESULTS_FIELD, "my_model");
+                    put(InferenceProcessor.TARGET_FIELD, "result");
+                    put(
+                        InferenceProcessor.INFERENCE_CONFIG,
+                        Collections.singletonMap(RegressionConfig.NAME.getPreferredName(), Collections.emptyMap())
+                    );
+                }
+            };
 
-        Map<String, Object> classification = new HashMap<>() {
-            {
-                put(InferenceProcessor.FIELD_MAP, Collections.emptyMap());
-                put(InferenceResults.MODEL_ID_RESULTS_FIELD, "my_model");
-                put(InferenceProcessor.TARGET_FIELD, "result");
-                put(
-                    InferenceProcessor.INFERENCE_CONFIG,
-                    Collections.singletonMap(
-                        ClassificationConfig.NAME.getPreferredName(),
-                        Collections.singletonMap(ClassificationConfig.NUM_TOP_CLASSES.getPreferredName(), 1)
-                    )
-                );
-            }
-        };
+            processorFactory.create(Collections.emptyMap(), "my_inference_processor", null, regression);
 
-        processorFactory.create(Collections.emptyMap(), "my_inference_processor", null, classification);
+            Map<String, Object> classification = new HashMap<>() {
+                {
+                    put(InferenceProcessor.FIELD_MAP, Collections.emptyMap());
+                    put(InferenceResults.MODEL_ID_RESULTS_FIELD, "my_model");
+                    put(InferenceProcessor.TARGET_FIELD, "result");
+                    put(
+                        InferenceProcessor.INFERENCE_CONFIG,
+                        Collections.singletonMap(
+                            ClassificationConfig.NAME.getPreferredName(),
+                            Collections.singletonMap(ClassificationConfig.NUM_TOP_CLASSES.getPreferredName(), 1)
+                        )
+                    );
+                }
+            };
 
-        Map<String, Object> mininmal = new HashMap<>() {
-            {
-                put(InferenceResults.MODEL_ID_RESULTS_FIELD, "my_model");
-                put(InferenceProcessor.TARGET_FIELD, "result");
-            }
-        };
+            processorFactory.create(Collections.emptyMap(), "my_inference_processor", null, classification);
 
-        processorFactory.create(Collections.emptyMap(), "my_inference_processor", null, mininmal);
+            Map<String, Object> mininmal = new HashMap<>() {
+                {
+                    put(InferenceResults.MODEL_ID_RESULTS_FIELD, "my_model");
+                    put(InferenceProcessor.TARGET_FIELD, "result");
+                }
+            };
+
+            processorFactory.create(Collections.emptyMap(), "my_inference_processor", null, mininmal);
+        });
     }
 
     public void testCreateProcessorWithDuplicateFields() {
-        InferenceProcessor.Factory processorFactory = new InferenceProcessor.Factory(client, clusterService, Settings.EMPTY);
+        Set<Boolean> includeNodeInfoValues = new HashSet<>(Arrays.asList(true, false));
 
-        Map<String, Object> regression = new HashMap<>() {
-            {
-                put(InferenceProcessor.FIELD_MAP, Collections.emptyMap());
-                put(InferenceResults.MODEL_ID_RESULTS_FIELD, "my_model");
-                put(InferenceProcessor.TARGET_FIELD, "ml");
-                put(
-                    InferenceProcessor.INFERENCE_CONFIG,
-                    Collections.singletonMap(
-                        RegressionConfig.NAME.getPreferredName(),
-                        Collections.singletonMap(RegressionConfig.RESULTS_FIELD.getPreferredName(), "warning")
-                    )
-                );
-            }
-        };
+        includeNodeInfoValues.forEach(includeNodeInfo -> {
+            InferenceProcessor.Factory processorFactory = new InferenceProcessor.Factory(
+                client,
+                clusterService,
+                Settings.EMPTY,
+                includeNodeInfo
+            );
 
-        Exception ex = expectThrows(
-            Exception.class,
-            () -> processorFactory.create(Collections.emptyMap(), "my_inference_processor", null, regression)
-        );
-        assertThat(ex.getMessage(), equalTo("Invalid inference config. " + "More than one field is configured as [warning]"));
+            Map<String, Object> regression = new HashMap<>() {
+                {
+                    put(InferenceProcessor.FIELD_MAP, Collections.emptyMap());
+                    put(InferenceResults.MODEL_ID_RESULTS_FIELD, "my_model");
+                    put(InferenceProcessor.TARGET_FIELD, "ml");
+                    put(
+                        InferenceProcessor.INFERENCE_CONFIG,
+                        Collections.singletonMap(
+                            RegressionConfig.NAME.getPreferredName(),
+                            Collections.singletonMap(RegressionConfig.RESULTS_FIELD.getPreferredName(), "warning")
+                        )
+                    );
+                }
+            };
+
+            Exception ex = expectThrows(
+                Exception.class,
+                () -> processorFactory.create(Collections.emptyMap(), "my_inference_processor", null, regression)
+            );
+            assertThat(ex.getMessage(), equalTo("Invalid inference config. " + "More than one field is configured as [warning]"));
+        });
     }
 
     public void testParseFromMap() {
-        InferenceProcessor.Factory processorFactory = new InferenceProcessor.Factory(client, clusterService, Settings.EMPTY);
-        for (var nameAndMap : List.of(
-            Tuple.tuple(ClassificationConfig.NAME.getPreferredName(), Map.of()),
-            Tuple.tuple(RegressionConfig.NAME.getPreferredName(), Map.of()),
-            Tuple.tuple(FillMaskConfig.NAME, Map.of()),
-            Tuple.tuple(NerConfig.NAME, Map.of()),
-            Tuple.tuple(PassThroughConfig.NAME, Map.of()),
-            Tuple.tuple(TextClassificationConfig.NAME, Map.of()),
-            Tuple.tuple(TextEmbeddingConfig.NAME, Map.of()),
-            Tuple.tuple(ZeroShotClassificationConfig.NAME, Map.of()),
-            Tuple.tuple(QuestionAnsweringConfig.NAME, Map.of("question", "What is the answer to life, the universe and everything?"))
-        )) {
-            assertThat(
-                processorFactory.inferenceConfigUpdateFromMap(Map.of(nameAndMap.v1(), nameAndMap.v2())).getName(),
-                equalTo(nameAndMap.v1())
+        Set<Boolean> includeNodeInfoValues = new HashSet<>(Arrays.asList(true, false));
+
+        includeNodeInfoValues.forEach(includeNodeInfo -> {
+            InferenceProcessor.Factory processorFactory = new InferenceProcessor.Factory(
+                client,
+                clusterService,
+                Settings.EMPTY,
+                includeNodeInfo
             );
-        }
+            for (var nameAndMap : List.of(
+                Tuple.tuple(ClassificationConfig.NAME.getPreferredName(), Map.of()),
+                Tuple.tuple(RegressionConfig.NAME.getPreferredName(), Map.of()),
+                Tuple.tuple(FillMaskConfig.NAME, Map.of()),
+                Tuple.tuple(NerConfig.NAME, Map.of()),
+                Tuple.tuple(PassThroughConfig.NAME, Map.of()),
+                Tuple.tuple(TextClassificationConfig.NAME, Map.of()),
+                Tuple.tuple(TextEmbeddingConfig.NAME, Map.of()),
+                Tuple.tuple(ZeroShotClassificationConfig.NAME, Map.of()),
+                Tuple.tuple(QuestionAnsweringConfig.NAME, Map.of("question", "What is the answer to life, the universe and everything?"))
+            )) {
+                assertThat(
+                    processorFactory.inferenceConfigUpdateFromMap(Map.of(nameAndMap.v1(), nameAndMap.v2())).getName(),
+                    equalTo(nameAndMap.v1())
+                );
+            }
+        });
     }
 
     private static ClusterState buildClusterState(Metadata metadata) {
@@ -363,9 +464,11 @@ public class InferenceProcessorFactoryTests extends ESTestCase {
             .metadata(Metadata.builder().putCustom(IngestMetadata.TYPE, ingestMetadata))
             .nodes(
                 DiscoveryNodes.builder()
-                    .add(new DiscoveryNode("min_node", new TransportAddress(InetAddress.getLoopbackAddress(), 9300), minNodeVersion))
-                    .add(new DiscoveryNode("current_node", new TransportAddress(InetAddress.getLoopbackAddress(), 9302), Version.CURRENT))
-                    .add(new DiscoveryNode("_node_id", new TransportAddress(InetAddress.getLoopbackAddress(), 9304), Version.CURRENT))
+                    .add(
+                        DiscoveryNodeUtils.create("min_node", new TransportAddress(InetAddress.getLoopbackAddress(), 9300), minNodeVersion)
+                    )
+                    .add(DiscoveryNodeUtils.create("current_node", new TransportAddress(InetAddress.getLoopbackAddress(), 9302)))
+                    .add(DiscoveryNodeUtils.create("_node_id", new TransportAddress(InetAddress.getLoopbackAddress(), 9304)))
                     .localNodeId("_node_id")
                     .masterNodeId("_node_id")
             )
